<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_upload"
        android:title="@string/upload"
        android:icon="@drawable/ic_menu_home"
        android:orderInCategory="100"
        app:showAsAction="withText" />
    <item
        android:id="@+id/menu_bookmark"
        android:title="@string/bookmark"
        android:icon="@drawable/ic_menu_user"
        android:orderInCategory="100"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/menu_share"
        android:title="@string/Share"
        android:icon="@drawable/ic_menu_search"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView">
        <menu>
            <item
                android:id="@+id/share1"
                android:title="Facebook"/>
            <item
                android:id="@+id/share2"
                android:title="Instagram"/>
        </menu>
    </item>
</menu>